--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -31,7 +31,7 @@ set -g prefix C-a
 unbind C-b
 bind C-a send-prefix # 绑定Ctrl+a为新的指令前缀
 
-set-option -g prefix2 ` # 设置一个不常用的`键作为指令前缀，按键更快些
+# set-option -g prefix2 ` # 设置一个不常用的`键作为指令前缀，按键更快些
 
 # 加载配置文件
 bind r source-file ~/.config/tmux/tmux.conf \; display-message "Config reloaded.."
